# xl-lexeme

./: pyproject.toml
WordTransformer/: WordTransformer.py
